ICU-23321 Convert one-shot volatile DCL to holder pattern
StandardPluralRanges and CharsetProviderICU both load static data from
JAR-bundled ICU resources that cannot fail transiently. The holder class
idiom (JLS 12.4.2) provides the same lazy initialization guarantee with
zero volatile reads on the fast path and less boilerplate.

Region and UConverterAlias are left as volatile DCL because they populate
many independent static fields, and wrapping them in a holder class would
require changing all access sites for a marginal benefit.